[package]
name = "teth"
version = "0.1.0"
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
rlp = "0.3.0"
patricia-trie = "0.3.0"
tiny-keccak = "1.4.2"
ethereum-types = "0.4.0"
ethbloom = "0.6.1"
secp256k1 = "0.12.2"
lazy_static = "1.2.0"
structopt = "0.2.14"
