[package]
name = "teth"
version = "0.0.1"
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
rlp = "0.3.0"
patricia-trie = "0.3.0"
tiny-keccak = "1.4.2"
ethereum-types = "0.4.0"
ethbloom = "0.6.2"
secp256k1 = "0.12.2"
lazy_static = "1.3.0"
structopt = "0.2.14"
patricia-trie-ethereum = "0.1.0"
memorydb = "0.3.0"
kvdb = "0.1.0"
keccak-hasher = "0.11.0"
hash-db = "0.11.0"
jsonrpc-ws-server = "10.1.0"
jsonrpc-derive = "10.1.0"
jsonrpc-core = "10.1.0"
serde = {version = "1.0.89", features = ["derive"]}
